feat: html and styles for nav and menu

--- a/index.html
+++ b/index.html
@@ -14,6 +14,86 @@
     <title>Document</title>
   </head>
   <body>
+    <!-- nav -->
+    <nav>
+      <div class="nav-container__left">
+        <a href="/" class="nav-logo">CRIS</a>
+        <aside class="nav-links">
+          <a class="nav-link">download cv</a> / <a class="nav-link">copy email</a>
+        </aside>
+      </div>
+      <div id="menu" class="nav-container__right">
+        <button id="toggleMenu" class="menu-button"></button>
+        <menu id="menu-list" class="menu-list__hidden">
+          <li class="menu-item menu-list-item__hidden">
+            <button class="menu-item__btn">About</button>
+          </li>
+          <li class="menu-item menu-list-item__hidden">
+            <button class="menu-item__btn">Projects</button>
+          </li>
+          <li class="menu-item menu-list-item__hidden">
+            <button class="menu-item__btn">Skills</button>
+          </li>
+          <li class="menu-item menu-list-item__hidden">
+            <button class="menu-item__btn">Contact</button>
+          </li>
+          <li class="menu-item menu-list-item__hidden">
+            <button class="menu-item__btn">Dark Mode</button>
+          </li>
+        </menu>
+      </div>
+    </nav>
+
+    <!-- hero -->
+    <section></section>
+
+    <!-- projects -->
+    <section></section>
+
+    <!-- skills -->
+    <section></section>
+
+    <!-- contact -->
+    <section></section>
+
+    <!-- footer -->
+    <footer></footer>
+    <h1>hello world</h1>
+    <h1>hello world</h1>
+    <h1>hello world</h1>
+    <h1>hello world</h1>
+    <h1>hello world</h1>
+    <h1>hello world</h1>
+    <h1>hello world</h1>
+    <h1>hello world</h1>
+    <h1>hello world</h1>
+    <h1>hello world</h1>
+    <h1>hello world</h1>
+    <h1>hello world</h1>
+    <h1>hello world</h1>
+    <h1>hello world</h1>
+    <h1>hello world</h1>
+    <h1>hello world</h1>
+    <h1>hello world</h1>
+    <h1>hello world</h1>
+    <h1>hello world</h1>
+    <h1>hello world</h1>
+    <h1>hello world</h1>
+    <h1>hello world</h1>
+    <h1>hello world</h1>
+    <h1>hello world</h1>
+    <h1>hello world</h1>
+    <h1>hello world</h1>
+    <h1>hello world</h1>
+    <h1>hello world</h1>
+    <h1>hello world</h1>
+    <h1>hello world</h1>
+    <h1>hello world</h1>
+    <h1>hello world</h1>
+    <h1>hello world</h1>
+    <h1>hello world</h1>
+    <h1>hello world</h1>
+    <h1>hello world</h1>
     <!-- scripts -->
     <script src="./app.js"></script>
   </body>
