styles: video and industrial tomb styles

--- a/index.html
+++ b/index.html
@@ -270,7 +270,39 @@
 	</section>
 
     <!-- projects -->
-    <section></section>
+    <section>
+		<h2 class="section-tag">&#60Projects&#62</h2>
+		<article class="industrial-tomb">
+			<div class="industrial-tomb__visuals">
+				<video autoplay muted loop>
+					<source src="./assets/IndustrialTombVideo.mp4" type="video/mp4" />
+				</video>
+			</div>
+			<div class="industrial-tomb__text">
+				<h3>Industrial Tomb</h3>
+				<h4>JavaScript Game</h4>
+				<h5>How to play:</h5>
+				<ul>
+				  <li>Push the movable boxes onto their corresponding pressure plates</li>
+				  <li>Press E to interact with the levers</li>
+				</ul>
+				<h5>Objective:</h5>
+				<ul>
+				  <li>Figure out the correct combination to solve the level and advance. Good Luck!</li>
+				</ul>
+				<a>Learn more...</a>
+				<div class="industrial-tomb__buttons">
+					<button>Play Game</button>
+					<button>Source Code</button>
+				</div>
+			</div>
+		</article>
+		<article>
+			<div></div>
+			<div></div>
+		</article>
+		<h2 class="section-tag">&#60/Projects&#62</h2>
+	</section>
 
     <!-- skills -->
     <section></section>
