style: pikachu project card styles

--- a/index.html
+++ b/index.html
@@ -272,6 +272,7 @@
     <!-- projects -->
     <section>
 		<h2 class="section-tag">&#60Projects&#62</h2>
+		<!-- Industrial Tomb -->
 		<article class="industrial-tomb">
 			<div class="industrial-tomb__visuals">
 				<video autoplay muted loop>
@@ -297,9 +298,23 @@
 				</div>
 			</div>
 		</article>
-		<article>
-			<div></div>
-			<div></div>
+		<!-- Pikachu -->
+		<article class="pikachu">
+			<div class="pikachu__text">
+				<h3>
+					<img class="pokemon-logo" src="./assets/pokemon logo.svg" alt="pokemon logo">
+				</h3>
+				<h4>"CSS Drawing"</h4>
+				<img class="arrow" src="./assets/Asset 5.svg" alt="arrow">
+				<a>Learn more...</a>
+				<div class="pikachu__buttons">
+					<button>View Drawing</button>
+					<button>Source Code</button>
+				</div>
+			</div>
+			<div class="pikachu__visuals">
+				<img src="./assets/Pikachu1.png" alt="pikachu drawing">
+			</div>
 		</article>
 		<h2 class="section-tag">&#60/Projects&#62</h2>
 	</section>
