feat: footer component and styles

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
   </head>
   <body>
+    
     <!-- nav -->
     <nav>
       <div class="nav-container__left">
@@ -1481,7 +1482,13 @@
     </section>
 
     <!-- footer -->
-    <footer></footer>
+    <footer>
+      <aside>
+        <a>download cv</a> / <a>copy email</a>
+      </aside>
+      <span>&copy; 2022 Christian Fugarino</span>
+    </footer>
+
     <!-- scripts -->
     <script src="./app.js"></script>
   </body>
