feat: dark mode logic with local storage and matchMedia, without styles

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <button class="menu-item__btn">Contact</button>
           </li>
           <li class="menu-item menu-list-item__hidden">
-            <button class="menu-item__btn">Dark Mode</button>
+            <button class="menu-item__btn" id="darkModeBtn">Dark Mode</button>
           </li>
         </menu>
       </div>
