feat: menu smooth scroll functionality

--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
         <button id="toggleMenu" class="menu-button"></button>
         <menu id="menu-list" class="menu-list__hidden">
           <li class="menu-item menu-list-item__hidden">
-            <button class="menu-item__btn">About</button>
+            <button class="menu-item__btn" id="aboutBtn">About</button>
           </li>
           <li class="menu-item menu-list-item__hidden">
-            <button class="menu-item__btn">Projects</button>
+            <button class="menu-item__btn" id="projectsBtn">Projects</button>
           </li>
           <li class="menu-item menu-list-item__hidden">
-            <button class="menu-item__btn">Skills</button>
+            <button class="menu-item__btn" id="skillsBtn">Skills</button>
           </li>
           <li class="menu-item menu-list-item__hidden">
-            <button class="menu-item__btn">Contact</button>
+            <button class="menu-item__btn" id="contactBtn">Contact</button>
           </li>
           <li class="menu-item menu-list-item__hidden">
             <button class="menu-item__btn" id="darkModeBtn">Dark Mode</button>
@@ -51,7 +51,7 @@
     </nav>
 
     <!-- hero -->
-    <section>
+    <section id="aboutMe">
       <h2 class="section-tag">&#60About Me&#62</h2>
       <div class="hero-grid">
         <aside class="hero-socials">
@@ -1293,7 +1293,7 @@
     </section>
 
     <!-- projects -->
-    <section>
+    <section id="projects">
       <h2 class="section-tag">&#60Projects&#62</h2>
       <article class="industrial-tomb">
         <div class="industrial-tomb__visuals">
@@ -1341,7 +1341,7 @@
     </section>
 
     <!-- skills -->
-    <section>
+    <section id="skills">
       <h2 class="section-tag">&#60Skills&#62</h2>
       <ul class="skills-grid">
         <li>
@@ -1444,7 +1444,7 @@
     </section>
 
     <!-- contact -->
-    <section>
+    <section id="contact">
       <h2 class="section-tag">&#60Contact&#62</h2>
       <div class="contact">
         <svg class="plane" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 2000 1250">
