feat: add tailwindcss to skills && add DS_Store to gitignore

--- a/index.html
+++ b/index.html
@@ -1345,12 +1345,12 @@
       <h2 class="section-tag">&#60Skills&#62</h2>
       <ul class="skills-grid">
         <li>
-          <i class="devicon-html5-plain colored"></i>
-          <h3>HTML</h3>
+          <i class="devicon-sass-original colored"></i>
+          <h3>SCSS</h3>
         </li>
         <li>
-          <i class="devicon-sass-original colored"></i>
-          <h3>CSS / SCSS</h3>
+          <i class="devicon-tailwindcss-plain colored"></i>
+          <h3>Tailwind</h3>
         </li>
         <li>
           <svg viewBox="0 0 128 128">
